webapps/test/v2/WEB-INF/jsp/error/500.jsp
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta charset="UTF-8" />
<link rel="stylesheet" href="${pageContext.request.contextPath}/css/error.css">
<title>500 Internal Server Error</title>
</head>
<body>
	<div class="error-container">
		<h1>500 Internal Server Error</h1>
		<p>The server encountered an internal error or misconfiguration
			and was unable to complete your request.
		</p>
	</div>
</body>
</html>